Added signmessage, verifysignature commands
